src/sass/base/_common.scss
body {
  font-family: 'DM Sans', sans-serif;
  font-weight: 500;
  letter-spacing: 0.04em;
  color: var(--primary-text-color);
}

h1,
h2,
h3,
h4,
h5,
h6,
.pseudo-heading {
  font-family: 'Titan One', cursive;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0.04em;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

img {
  display: block;
  width: 100%;
  height: auto;
}

address {
  font-style: normal;
}

.list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.link {
  text-decoration: none;
}

.btn {
  font-size: 14px;
  line-height: calc(18 / 14);
  padding: 10px 25px;
  border-style: none;
  border-radius: 50px;
  cursor: pointer;
  transition: background-color var(--anim-props), transform var(--anim-props);
  &--primary {
    background-color: var(--title-color);
    color: var(--white-color);
    &:hover,
    &:focus {
      transform: scale3d(1.3, 1.3, 1.3);
      background-color: var(--btn-primary-hover-color);
    }
  }

  &--secondary {
    background-color: var(--white-color);
    color: var(--title-color);
    &:hover,
    &:focus {
      transform: scale3d(1.3, 1.3, 1.3);
      background-color: var(--btn-secondary-hover-color);
    }
  }
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;

  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.icon {
  fill: currentColor;
}

.no-scroll {
  overflow: hidden;
}

